# ltui

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lightning_tui/: app.py  cli.py  data.py  discovery.py  plotting.py  state.py
src/ltui/: __init__.py  app.py  cli.py  data.py  discovery.py  lightning.py  plotting.py  state.py
tests/: test_app.py  test_cli.py  test_data.py  test_discovery.py  test_lightning.py  test_plotting.py  test_state.py
