[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "ltui"
version = "0.2.0"
description = "Terminal UI and lightweight logger for PyTorch Lightning training metrics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Erik Ayari" }
]
keywords = [
  "csvlogger",
  "logger",
  "lightning",
  "metrics",
  "plotext",
  "pytorch-lightning",
  "terminal",
  "textual",
  "tui",
  "visualization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "pandas>=2.2",
  "plotext>=5.3",
  "rapidfuzz>=3.0",
  "textual>=0.80",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=6.0",
]
logger = [
  "lightning>=2.0",
  "pillow>=10.0",
]

[project.scripts]
ltui = "ltui.cli:main"

[project.urls]
Repository = "https://github.com/erik-ayari/ltui"
Issues = "https://github.com/erik-ayari/ltui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ltui"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
